dead-lock detector tests